--- a/index.html
+++ b/index.html
@@ -78,11 +78,42 @@
             </div>
             <div class="call-now">
                 <div class="call-now-des">
-                    <h2 class="h2-bold-white">Awlays keep a positive mindset</h2>
+                    <h2 class="h2-bold-white m-bottom1">Awlays keep a positive <br> mindset</h2>
                     <button class="btn2">Call Now</button>
                 </div>
             </div>
-        </section>
+        </section>    
     </main>
+    <!-- Footer -->
+    <footer class="m-top10 pos-flex1 f-space-arround">
+        <!-- <div class="footer-container"> -->
+            <div>
+                <h3 class="h2-bold">Future</h3>
+                <br>
+                <div class="p1-text">
+                    <p>
+                        There are many variations of passages of Lorem Ipsum
+                        available, but the majority have suffered alteration in some
+                        form, by injected humour, or randomised words
+                    </p>
+                    <br>
+                    <p>Email : info@gmail.com</p>
+                    <br>
+                    <p>Phone : 01500 00 00 00</p>
+                    <br>
+                </div>
+                <div class="footer-icon">
+                    <img src="./images/icons/fb.png" alt="">
+                    <img src="./images/icons/twitter.png" alt="">
+                    <img src="./images/icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div>
+                <p class="p2-text-white m-bottom1">Subscribe</p>
+                <input class="m-bottom1" type="email" placeholder="Enter Your Email">
+                <button class="btn2">Subscribe</button>
+            </div>
+        <!-- </div> -->
+    </footer>
 </body>
 </html>
