updated font awesome icons

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 </p>
                 <br>
                 <div class="check-list p1-text">
-                    <p><img class="check-icon" src="./images/icons/check-mark.png" alt=""><span>Contrary to popular simply</span></p>
-                    <p><img class="check-icon" src="./images/icons/check-mark.png" alt=""><span>Contrary to popular belief, is not simply</span></p>
-                    <p><img class="check-icon" src="./images/icons/check-mark.png" alt=""><span>Contrary to popular simply</span></p>
-                    <p><img class="check-icon" src="./images/icons/check-mark.png" alt=""><span>Contrary to popular belief, is not simply</span></p>
-                    <p><img class="check-icon" src="./images/icons/check-mark.png" alt=""><span>Contrary to popular simply</span></p>
+                    <p><i class="fa-solid fa-check check-icon"></i> <span>Contrary to popular simply</span></p>
+                    <p><i class="fa-solid fa-check check-icon"></i> <span>Contrary to popular belief, is not simply</span></p>
+                    <p><i class="fa-solid fa-check check-icon"></i> <span>Contrary to popular simply</span></p>
+                    <p><i class="fa-solid fa-check check-icon"></i> <span>Contrary to popular belief, is not simply</span></p>
+                    <p><i class="fa-solid fa-check check-icon"></i> <span>Contrary to popular simply</span></p>
                 </div>
             </div>
         </section>
